fixed logo alignment on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,8 @@ img {
 
     .nav-logo{
         width: 80px;
+        margin-top: auto;
+        margin-bottom: auto;
     }
 }
 
